# webdomain-test-notebooks

./: .gitignore  Deepagents_flow_description.md  README.md  fix_baml_paths.py  nextjs_coding_agent.ipynb  nextjs_deepagent_baml_test.ipynb  pyproject.toml  regenerate_baml.sh
baml_client/: __init__.py  async_client.py  globals.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: allowed_html_tags.baml  clients.baml  nextjs_generation_steps.baml  resume.baml  types.baml
