[project]
name = "webdomain-test-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Harsh"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "baml-cli (>=0.1.0,<0.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
